--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -6,7 +6,7 @@ import Menu from "@comps/menu.astro";
 <div class="z-[999] navbar bg-white/50 backdrop-blur-sm fixed left-0 right-0 mx-auto duration-500 shadow-xl shadow-secondary/30">
     <div class="navbar-start">
         <div class="dropdown">
-            <div tabindex="-1" role="button" class="btn btn-ghost text-white lg:hidden">
+            <div tabindex="-1" role="button" class="btn btn-ghost text-primary lg:hidden">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" >
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16"></path>
                 </svg>
