--- a/src/components/contact.astro
+++ b/src/components/contact.astro
@@ -32,7 +32,7 @@ import Touch from "./touch.astro"
               <textarea class="w-full rounded-lg border-secondary border-2 p-3 text-sm ring-0 hover:ring-0 outline-0 hover:outline-0 hover:shadow-lg focus:shadow-lg bg-white/80" placeholder="Message" rows="8" name="message" ></textarea>
             </div>
 
-            <input type="hidden" name="_next" value="https://new.iescapedvim.com/#contact">
+            <input type="hidden" name="_next" value="https://iescapedvim.com/#contact">
   
             <div class="mt-4">
               <button type="submit" class="inline-block w-full rounded-lg bg-gradient-to-r from-primary to-secondary hover:from-primary/90 hover:to-secondary/90 border-2 border-gray-300 font-bold px-5 py-3 text-white sm:w-auto" >
