--- a/src/components/head.astro
+++ b/src/components/head.astro
@@ -30,4 +30,161 @@ import 'aos/dist/aos.css';
         -ms-user-select: none;
         user-select: none;
     }
+    
+    .button {
+    --h-button: 48px;
+    --w-button: 102px;
+    --round: 0.75rem;
+    cursor: pointer;
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    transition: all 0.25s ease;
+    background: radial-gradient( 65.28% 65.28% at 50% 100%, #9067c6 0%, #041e42 100% ), linear-gradient(0deg, #7a5af8, #7a5af8);
+    border-radius: 50px;
+    border: none;
+    outline: none;
+    padding: 12px 18px;
+    }
+    .button::before,
+    .button::after {
+    content: "";
+    position: absolute;
+    inset: var(--space);
+    transition: all 0.5s ease-in-out;
+    border-radius: 50px;
+    z-index: 0;
+    }
+    .button::before {
+    --space: 1px;
+    background: linear-gradient( 177.95deg, rgba(255, 255, 255, 0.19) 0%, rgba(255, 255, 255, 0) 100% );
+    }
+    .button::after {
+    --space: 2px;
+    background: radial-gradient( 65.28% 65.28% at 50% 100%, #9067c6 0%, #041e42 100% ),
+    }
+    .button.mt-8.w-44.mx-auto.aos-init.aos-animate:hover {
+    transform: scale(1.05);
+    }
+
+    .points_wrapper {
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    position: absolute;
+    z-index: 1;
+    }
+
+    .points_wrapper .point {
+    bottom: -10px;
+    position: absolute;
+    animation: floating-points infinite ease-in-out;
+    pointer-events: none;
+    width: 2px;
+    height: 2px;
+    background-color: #fff;
+    border-radius: 50px;
+    }
+    @keyframes floating-points {
+    0% {
+        transform: translateY(0);
+    }
+    85% {
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(-55px);
+        opacity: 0;
+    }
+    }
+    .points_wrapper .point:nth-child(1) {
+    left: 10%;
+    opacity: 1;
+    animation-duration: 2.35s;
+    animation-delay: 0.2s;
+    }
+    .points_wrapper .point:nth-child(2) {
+    left: 30%;
+    opacity: 0.7;
+    animation-duration: 2.5s;
+    animation-delay: 0.5s;
+    }
+    .points_wrapper .point:nth-child(3) {
+    left: 25%;
+    opacity: 0.8;
+    animation-duration: 2.2s;
+    animation-delay: 0.1s;
+    }
+    .points_wrapper .point:nth-child(4) {
+    left: 44%;
+    opacity: 0.6;
+    animation-duration: 2.05s;
+    }
+    .points_wrapper .point:nth-child(5) {
+    left: 50%;
+    opacity: 1;
+    animation-duration: 1.9s;
+    }
+    .points_wrapper .point:nth-child(6) {
+    left: 75%;
+    opacity: 0.5;
+    animation-duration: 1.5s;
+    animation-delay: 1.5s;
+    }
+    .points_wrapper .point:nth-child(7) {
+    left: 88%;
+    opacity: 0.9;
+    animation-duration: 2.2s;
+    animation-delay: 0.2s;
+    }
+    .points_wrapper .point:nth-child(8) {
+    left: 58%;
+    opacity: 0.8;
+    animation-duration: 2.25s;
+    animation-delay: 0.2s;
+    }
+    .points_wrapper .point:nth-child(9) {
+    left: 98%;
+    opacity: 0.6;
+    animation-duration: 2.6s;
+    animation-delay: 0.1s;
+    }
+    .points_wrapper .point:nth-child(10) {
+    left: 65%;
+    opacity: 1;
+    animation-duration: 2.5s;
+    animation-delay: 0.2s;
+    }
+
+    .inner {
+    z-index: 2;
+    gap: 6px;
+    position: relative;
+    width: 100%;
+    color: white;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    transition: color 0.2s ease-in-out;
+    }
+
+    @keyframes dasharray {
+    from {
+        stroke-dasharray: 0 0 0 0;
+    }
+    to {
+        stroke-dasharray: 68 68 0 0;
+    }
+    }
+    @keyframes filled {
+    to {
+        fill: white;
+    }
+    }
 </style>
