--- a/src/components/aboutme.astro
+++ b/src/components/aboutme.astro
@@ -11,27 +11,16 @@ import Touch from './touch.astro';
         <div class="relative bg-white/60 py-3 rounded-lg border-2 border-primary backdrop-blur-sm text-start px-12 w-fit h-full col-span-5" transition:name="aboutmesection">
             <h1 class='font-outfit font-bold text-4xl md:text-5xl text-neutral lg:text-6xl mt-2'>About <span class="bg-gradient-to-r from-primary to-secondary bg-clip-text text-transparent">Me</span></h1>
             <div class='text-xl font-medium pt-2 text-neutral flex flex-col gap-5'>   
-                <p class="mt-2 -mb-4">My name is <span class="font-bold text-secondary" transition:name="myname"> {NAME}</span></p>
-                <p> I'm a seasoned web developer and technical project lead with over 8 years of experience in crafting visually compelling, responsive, & functionally robust websites. Outside of work, I enjoy cooking/exploring new recipes, some photography, watching anime/discovering new series, & spending time with my feline friends.</p>
-                <span data-aos="fade-up" data-aos-duration="500">
-                    <ul class="text-lg font-medium list-disc ms-4 marker:text-secondary text-neutral">
-                        <li>
-                            Proficient in HTML5, CSS3, Bootstrap, JavaScript, TailwindCSS, and CMS platforms
-                        </li>
-                        <li>
-                            Skilled in LAMP stack for server-side development and deployment
-                        </li>
-                        <li>
-                            Proven ability to lead cross-functional teams and deliver high-quality projects
-                        </li>
-                        <li>
-                            Passionate about crafting visually stunning, responsive, and user-friendly websites
-                        </li>
-                    </ul>
-                    <p class="py-3">Let's build your digital future together.</p>
-                    <span class="text-primary text-3xl font-bold flex flex-row gap-3">
-                        <Touch />
-                    </span>
+                <p class="mt-2 -mb-4">My name is <span class="font-bold text-secondary" transition:name="myname"> {NAME}</span>, I'm a seasoned web developer and technical project lead with over 8 years of experience in crafting visually compelling, responsive, & functionally robust websites.</p>
+                <ul class="text-lg font-medium list-disc ms-4 marker:text-secondary text-neutral mt-4">
+                    <li>Proficient in HTML5, CSS3, Bootstrap, JavaScript, TailwindCSS, and CMS platforms</li>
+                    <li>Skilled in LAMP stack for server-side development and deployment </li>
+                    <li>Proven ability to lead cross-functional teams and deliver high-quality projects </li>
+                    <li>Passionate about crafting visually stunning, responsive, and user-friendly websites </li>
+                </ul>
+                <p class="py-2">Let's build your digital future together.</p>
+                <span class="text-primary text-3xl font-bold flex flex-row gap-3">
+                    <Touch />
                 </span>
             </div>
         </div>
