--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -1,12 +1,12 @@
 ---
 import Name from '@comps/code.jsx'
 import { Image } from 'astro:assets'
-import { NAME } from '@consts/consts';
+import { NAME, ROLE } from '@consts/consts';
 import Me from '@assets/toy me.png';
 import Touch from './touch.astro';
 ---
 <section class='relative h-[500] flex flex-col w-full py-24 justify-center items-center'>
-    <h1 class="unselectable font-bold stroke-text mx-auto text-6xl md:text-7xl uppercase mb-4 md:-mb-12 text-primary text-center w-full" transition:name="myname">{NAME}</h1>
+    <h1 class="unselectable font-bold stroke-text mx-auto text-6xl md:text-7xl uppercase mb-4 md:-mb-12 text-primary text-center w-full">{ROLE}</h1>
     <div class="grid grid-cols-1 md:grid-cols-9 z-10 w-full h-fit px-12 justify-center items-center gap-6">
         <div class="order-2 md:order-1 col-span-3 flex flex-col gap-3 justify-start items-center md:mt-20 backdrop-blur-[2px]" transition:name="aboutmesection">
             <div data-aos="fade-up" data-aos-duration="500" class="w-full flex flex-col gap-3 bg-gradient-to-r from-primary/80 to-secondary/90 py-3 px-6 rounded-lg backdrop-blur-lg border-2 border-gray-300">
@@ -30,10 +30,10 @@ import Touch from './touch.astro';
         <div id="stats" class="order-3 col-span-3 flex flex-col gap-3 justify-start items-center md:mt-44 backdrop-blur-[2px]">
             <div data-aos-anchor="#stats" data-aos="fade-up" data-aos-duration="500" class="w-full flex flex-col gap-3 bg-gradient-to-r from-primary/80 to-secondary/90 py-3 px-6 rounded-lg border-2 border-gray-300">
                 <h2 class="text-white text-2xl font-bold">
-                    Project Done
+                    Projects Completed
                 </h2>
                 <p class="text-white text-3xl font-bold">
-                    437
+                    400+
                 </p>
             </div>
             <div data-aos-anchor="#stats" data-aos="fade-up" data-aos-duration="800" class="w-full flex flex-col gap-3 bg-gradient-to-r from-primary/80 to-secondary/90 py-3 px-6 rounded-lg  border-2 border-gray-300">
@@ -49,7 +49,7 @@ import Touch from './touch.astro';
                     Clients WorldWide
                 </h2>
                 <p class="text-white text-3xl font-bold">
-                    300+
+                    350+
                 </p>
             </div>
         </div>
