--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -49,7 +49,7 @@ import Contact from '@comps/sidebar/contact.astro';
 
     <div class="w-full bg-cover bg-no-repeat relative">
       <Image src={entry.data.image} alt={entry.data.title} class="w-full h-full rounded-xl object-cover"  transition:name={entry.data.title+"'simage"}/>
-      <span class="w-full h-1/4 absolute bottom-0 flex justify-center items-center bg-gradient-to-r from-primary/80 to-secondary/80 backdrop-blur-[2px]">
+      <span class="w-full h-1/4 px-6 absolute bottom-0 flex justify-center items-center bg-gradient-to-r from-primary/80 to-secondary/80 backdrop-blur-[2px]">
         <h1 class="text-3xl font-bold text-white" transition:name={entry.data.title}>{entry.data.title}</h1>
       </span>
     </div>
