--- a/src/components/sidebar/categories.astro
+++ b/src/components/sidebar/categories.astro
@@ -1,7 +1,7 @@
 ---
 import { getCollection } from 'astro:content';
 
-const allPosts = await getCollection("blog");
+const allPosts = await getCollection("blog", ({ data }) => data.published === true);
 
 // Get all possible categories from the enum in the config
 const categories = [
