--- a/src/components/sidebar/tags.astro
+++ b/src/components/sidebar/tags.astro
@@ -1,7 +1,7 @@
 ---
 import { getCollection } from 'astro:content';
 
-const allPosts = await getCollection("blog");
+const allPosts = await getCollection("blog", ({ data }) => data.published === true);
 const allTags = allPosts.map(post => post.data.tags).flat();
 
 // Count occurrences of each tag
