--- a/src/pages/projects/[...slug].astro
+++ b/src/pages/projects/[...slug].astro
@@ -31,7 +31,7 @@ import Contact from '@comps/sidebar/contact.astro';
 ---
 
 <Layout frontmatter={entry.data} SiteTitle={entry.data.title}>
-  <div class="col-span-1 h-fit flex justify-center relative">
+  <div class="col-span-1 h-fit md:flex justify-center relative hidden">
     <div class="flex flex-col gap-3 bg-white/60 backdrop-blur-[2px] fixed border-2 border-primary rounded-lg p-3">
       <Reddit url={currentPageURL} title={entry.data.title} description={entry.data.description} />
       <Facebook url={currentPageURL} title={entry.data.title} description={entry.data.description} />
@@ -44,12 +44,12 @@ import Contact from '@comps/sidebar/contact.astro';
     </div>
   </div>
 
-  <div class="bg-white/60 backdrop-blur-[2px] shadow-md z-10 col-span-8 h-fit border-2 border-primary rounded-lg mb-3">
+  <div class="bg-white/60 backdrop-blur-[2px] shadow-md z-10 col-span-12 md:col-span-8 h-fit border-2 border-primary rounded-lg mb-3">
 
     <div class="w-full bg-cover bg-no-repeat relative">
-      <Image src={entry.data.image} alt={entry.data.title} class="w-full h-full rounded-xl object-cover" transition:name={entry.data.title+"'simage"}/>
-      <span class="w-full h-1/4 px-6 absolute bottom-0 flex justify-center items-center bg-gradient-to-r from-primary/80 to-secondary/80 backdrop-blur-[2px]">
-        <h1 class="text-3xl font-bold text-white">{entry.data.title}</h1>
+      <Image src={entry.data.image} alt={entry.data.title} class="w-full h-64 md:h-full rounded-xl object-cover" transition:name={entry.data.title+"'simage"}/>
+      <span class="w-full h-24 md:h-32 px-6 absolute bottom-0 flex justify-center items-center bg-gradient-to-r from-primary/80 to-secondary/80 backdrop-blur-[2px]">
+        <h1 class="text-xl md:text-3xl font-bold text-white">{entry.data.title}</h1>
       </span>
     </div>
 
@@ -75,7 +75,7 @@ import Contact from '@comps/sidebar/contact.astro';
 
   </div>
 
-  <div class="col-span-3 h-fit">
+  <div class="col-span-12 md:col-span-3 h-fit">
     <Sidebar />
   </div>
 
