--- a/src/components/sidebar/contact.astro
+++ b/src/components/sidebar/contact.astro
@@ -2,7 +2,7 @@
 import Touch from "../touch.astro"
 ---
 <section id="contact" class="col-span-12 md:ms-20">
-    <div class="mx-auto max-w-screen-xl px-4 sm:px-6 lg:px-8 my-12">
+    <div class="mx-auto max-w-screen-xl my-12">
         <h2 data-aos="fade-right" data-aos-duration="1100" class="font-outfit pb-8 font-bold text-4xl md:text-5xl lg:text-6xl text-neutral mt-2">Contact <span class="bg-gradient-to-r from-primary to-secondary bg-clip-text text-transparent">Me</span></h2>
       <div class="grid grid-cols-1 gap-x-16 gap-y-8 lg:grid-cols-5">
         <div class="border-2 border-primary rounded-lg bg-white/60 p-8 shadow-lg lg:col-span-3 lg:p-12 z-10 backdrop-blur-[2px]" data-aos="fade-up" data-aos-duration="800">
