--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -18,7 +18,7 @@ import Lost from '@assets/lost.svg';
                 <p class="text-gray-600">The page you looking for either never existed or was deleted, or you just made a typo. Anyway click the button below to get back on track or notify me.</p>
                 <div class="flex flex-row gap-3 mt-5 mx-auto">
                     <a href="/" class="btn bg-primary text-white hover:bg-secondary hover:text-black">Go Home</a>
-                    <a href="mailto:info@iescapedvim.com" class="btn bg-secondary hover:bg-primary hover:text-white">Contact Me</a>
+                    <a href="mailto:info@iescapedvim.com" class="btn bg-secondary hover:bg-primary text-white">Contact Me</a>
                 </div>
             </div>
         </section>
