--- a/src/layouts/MarkdownLayout.astro
+++ b/src/layouts/MarkdownLayout.astro
@@ -1,45 +1,43 @@
 ---
-const { frontmatter } = Astro.props;
+import Contact from "@/components/sidebar/contact.astro";
 import Head from "@comps/head.astro"
 import Header from "@comps/header.astro"
 import Footer from "@comps/footer.astro"
 import Mcan from '@comps/mcan.tsx';
 import { Schema } from "astro-seo-schema"
-import { NAME, WEBSITE } from '@consts/consts';
-const { SiteTitle } = Astro.props;
+const { SiteTitle, postTitle, postDescription, postImage, publishDate, modifiedDate, postSlug} = Astro.props;
 ---
 <!doctype html>
 <html lang="en" class="overflow-x-hidden">
 	<Head> 
 		<title>{SiteTitle}</title>
 
-		<meta property="og:title" content={frontmatter.title} />
+		<meta property="og:title" content={postTitle} />
 		<meta property="og:type" content="article" />
-		<meta property="og:description"  content={frontmatter.description} />
+		<meta property="og:description"  content={postDescription} />
 		<meta property="og:determiner" content="the" />
 		<meta property="og:locale" content="en_US" />
-		<meta property="og:site_name" content={frontmatter.title} />
-		<meta property="og:image" content={frontmatter.image.src} />
+		<meta property="og:site_name" content={postTitle} />
+		<meta property="og:image" content={postImage} />
 		<meta property="og:image:type" content="image/jpeg" />
-		<meta property="og:image:alt" content={frontmatter.imagealt} />
+		<meta property="og:image:alt" content={postTitle} />
 
 		<!-- Twitter Meta Tags -->
 		<meta name="twitter:card" content="summary_large_image">
-		<meta property="twitter:url" content={frontmatter.url}>
-		<meta name="twitter:title" content={frontmatter.title}>
-		<meta name="twitter:description" content={frontmatter.description}>
-		<meta name="twitter:image" content={frontmatter.image.src}>
+		<meta property="twitter:url" content={postSlug}>
+		<meta name="twitter:title" content={postTitle}>
+		<meta name="twitter:description" content={postDescription}>
+		<meta name="twitter:image" content={postImage}>
 		
 		<Schema
 			item={{
 				"@context": "https://schema.org",
 				"@type": "Article",
-				headline: frontmatter.title,
-				description: frontmatter.description,
-				image: frontmatter.image.src,
-				datePublished: frontmatter.date,
-				dateModified: frontmatter.date,
-				keywords: frontmatter.tags,
+				headline: postTitle,
+				description: postDescription,
+				image: postImage,
+				datePublished: publishDate,
+				dateModified: modifiedDate,
 			}}
 		/>
 	</Head>
@@ -48,6 +46,7 @@ const { SiteTitle } = Astro.props;
 		<Header />
 		    <section class="pt-24 grid grid-cols-1 md:grid-cols-12 px-6 gap-8">
                 <slot />
+				<Contact />
             </section>
 		<Footer />
 	</body>
